force-app/main/default/objects/NI_TriggerBypassSwitches__c/NI_TriggerBypassSwitches__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NICC-010252: Global Custom Setting for Trigger Bypassing

Used to turn off code execution on triggers globally or per specific object(s).</description>
    <label>NI Trigger Bypass Switches</label>
</CustomObject>