force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_activityLineItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_activityLineItemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass activityLineItemTrigger</label>
    <type>Checkbox</type>
</CustomField>