force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AH_Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AH_Account_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass AH Account Product</label>
    <type>Checkbox</type>
</CustomField>