force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AH_Finance_ReqToSIN_LineItem__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AH_Finance_ReqToSIN_LineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-030091

Bypass the triggers on the AH_Finance_Request_to_SIN_Line_Item__c object</description>
    <label>Bypass_AH_Finance_ReqToSIN_LineItem</label>
    <type>Checkbox</type>
</CustomField>