force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AH_Opportunity_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AH_Opportunity_Related_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass AH Opportunity Related Account</label>
    <type>Checkbox</type>
</CustomField>