force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AH_Project_Backlog_Margin_Calc__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AH_Project_Backlog_Margin_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-048128

When this check box is checked, the &quot;Update_Margin&quot; method in the &quot;NI_ProjectBacklog_TriggerHandler&quot; Apex Class is not executed</description>
    <inlineHelpText>When this check box is checked, the &quot;Update_Margin&quot; method in the &quot;NI_ProjectBacklog_TriggerHandler&quot; Apex Class is not executed</inlineHelpText>
    <label>Bypass AH_Project_Backlog Margin Calc</label>
    <type>Checkbox</type>
</CustomField>