force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AH_Project_Backlog_Workstreams_c__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AH_Project_Backlog_Workstreams_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass triggers on the AH_Project_Backlog_Workstreams__c Object</description>
    <inlineHelpText>Bypass triggers on the AH_Project_Backlog_Workstreams__c Object</inlineHelpText>
    <label>Bypass AH_Project_Backlog_Workstreams__c</label>
    <type>Checkbox</type>
</CustomField>