force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_AIP_GDS_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Bypass_AIP_GDS_Monthly_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass AIP_GDS_Monthly_Revenue</label>
    <type>Checkbox</type>
</CustomField>