force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Assignment_Flows__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Assignment_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Switch to turn off calls to execute Flows on Assignment</inlineHelpText>
    <label>Bypass Assignment Flows</label>
    <type>Checkbox</type>
</CustomField>