force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_billingContract__c.field-meta.xml
<CustomField>
    <fullName>Bypass_billingContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass_billingContract</label>
    <type>Checkbox</type>
</CustomField>