force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Cancellation_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Cancellation_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-025668</description>
    <inlineHelpText>Turns off rollup to attached Activity Line Items on Cancellation records</inlineHelpText>
    <label>Bypass Cancellation Rollup</label>
    <type>Checkbox</type>
</CustomField>