force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ChangeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this check box is checked, the triggers on the SFDC_CSP_Development_Request__c are disabled</description>
    <inlineHelpText>When this check box is checked, the triggers on the SFDC_CSP_Development_Request__c are disabled</inlineHelpText>
    <label>Bypass_ChangeRequest</label>
    <type>Checkbox</type>
</CustomField>