force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-027123
Bypass Contact object&apos;s trigger handler code</description>
    <inlineHelpText>Bypass Contact object&apos;s trigger handler code</inlineHelpText>
    <label>Bypass Contact</label>
    <type>Checkbox</type>
</CustomField>