force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ffaCashEntryTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ffaCashEntryTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ffaCashEntryTrigger</label>
    <type>Checkbox</type>
</CustomField>