force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ffaPayableInvoiceTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ffaPayableInvoiceTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ffaPayableInvoiceTrigger</label>
    <type>Checkbox</type>
</CustomField>