force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ffaPaymentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ffaPaymentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ffaPaymentTrigger</label>
    <type>Checkbox</type>
</CustomField>