force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ffaRequisitionLineItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ffaRequisitionLineItemTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass the triggers on the SCMC__Requisition__c object</description>
    <inlineHelpText>Bypass the triggers on the SCMC__Requisition__c object</inlineHelpText>
    <label>Bypass ffaRequisitionLineItemTrigger</label>
    <type>Checkbox</type>
</CustomField>