force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_ffaRequisitionTrigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_ffaRequisitionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass ffaRequisitionTrigger</label>
    <type>Checkbox</type>
</CustomField>