force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_IT_Hardware_Asset_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_IT_Hardware_Asset_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass the IT_Hardware_Asset Trigger Handler Class</description>
    <label>Bypass IT Hardware Asset</label>
    <type>Checkbox</type>
</CustomField>