force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_Customer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_Customer_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Customer_Agreement object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Customer_Agreement object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Customer_Agreement</label>
    <type>Checkbox</type>
</CustomField>