force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_Invoice_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_Invoice_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Invoice_Detail object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Invoice_Detail object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Invoice_Detail</label>
    <type>Checkbox</type>
</CustomField>