force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_Job_Requisition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass the NI_JobReq_TriggerHandler Code</description>
    <inlineHelpText>Bypass the NI_JobReq_TriggerHandler Code</inlineHelpText>
    <label>Bypass NI Job Requisition</label>
    <type>Checkbox</type>
</CustomField>