force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_License_Audit_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_License_Audit_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass ALL NI License Audit object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass ALL NI License Audit object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI License Audit</label>
    <type>Checkbox</type>
</CustomField>