force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_Pager_Bonus_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_Pager_Bonus_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By-pass Triggers on the NI Pager Bonus Object</description>
    <inlineHelpText>By-pass Triggers on the NI Pager Bonus Object</inlineHelpText>
    <label>Bypass NI Pager Bonus</label>
    <type>Checkbox</type>
</CustomField>