force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NI_Project_Backlog_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NI_Project_Backlog_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI Project Backlog object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI Project Backlog object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI Project Backlog</label>
    <type>Checkbox</type>
</CustomField>