force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_NITrustOutageNotifications__c.field-meta.xml
<CustomField>
    <fullName>Bypass_NITrustOutageNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for NICC-028116 and used by AH Trust Outage notifications.</description>
    <inlineHelpText>Created for NICC-028116 and used by AH Trust Outage notifications.</inlineHelpText>
    <label>Bypass NI Trust Outage Notifications</label>
    <type>Checkbox</type>
</CustomField>