force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_PSA_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Bypass_PSA_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-010968

Used to Bypass Triggers on the &quot;pse__Milestone__c&quot; Object</description>
    <inlineHelpText>Used to Bypass Triggers on the &quot;pse__Milestone__c&quot; Object</inlineHelpText>
    <label>Bypass PSA Milestone</label>
    <type>Checkbox</type>
</CustomField>