force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Softrax_Asset__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Softrax_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Softrax Asset object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Softrax Asset object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Softrax Asset</label>
    <type>Checkbox</type>
</CustomField>