force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Subscription_Activation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Subscription_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this check box is checked, the Apex Triggers on the Subscription Activation Object do not fire.</description>
    <label>Bypass Subscription Activation</label>
    <type>Checkbox</type>
</CustomField>