force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_SubscriptionActivationTransaction__c.field-meta.xml
<CustomField>
    <fullName>Bypass_SubscriptionActivationTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this check box is checked, the Apex Triggers on the Subscription Activation Transaction Object do not fire.</description>
    <inlineHelpText>When this check box is checked, the Apex Triggers on the Subscription Activation Transaction Object do not fire.</inlineHelpText>
    <label>Bypass SubscriptionActivationTransaction</label>
    <type>Checkbox</type>
</CustomField>