force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Survey_Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Survey_Response_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Recent Survey Response Data object&apos;s trigger handler code.</description>
    <label>Bypass Survey Response Data</label>
    <type>Checkbox</type>
</CustomField>