force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Task_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Task_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Task/Activity/Event object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Task/Activity/Event object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Task</label>
    <type>Checkbox</type>
</CustomField>