force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_TopicAssignment_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_TopicAssignment_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-010302 

Bypass the Topic Assignment Triggers</description>
    <inlineHelpText>Bypass the Topic Assignment Triggers</inlineHelpText>
    <label>Bypass TopicAssignment</label>
    <type>Checkbox</type>
</CustomField>