force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_User_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_User_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-013396</description>
    <label>Bypass User</label>
    <type>Checkbox</type>
</CustomField>