force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/Bypass_Winaproach_ON__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Winaproach_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to bypass all Win@proach/Service Now Triggers that were written by Cybage</inlineHelpText>
    <label>Bypass Win@proach</label>
    <type>Checkbox</type>
</CustomField>