force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassAccount_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassAccount_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Account object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Account object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Account</label>
    <type>Checkbox</type>
</CustomField>