force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassApttusAgreement_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassApttusAgreement_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Apttus_Agreement object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Apttus_Agreement object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Apttus Agreement</label>
    <type>Checkbox</type>
</CustomField>