force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassAsset_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassAsset_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Deployment Instance object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Deployment Instance object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Deployment Instance</label>
    <type>Checkbox</type>
</CustomField>