force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassAttachment_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassAttachment_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Attachment object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Attachment object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Attachment</label>
    <type>Checkbox</type>
</CustomField>