force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassCase_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassCase_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Case object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Case object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Case</label>
    <type>Checkbox</type>
</CustomField>