force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassCaseComment_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseComment_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass CaseComment object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass CaseComment object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass CaseComment</label>
    <type>Checkbox</type>
</CustomField>