force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassCaseFlags_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseFlags_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass custom case flags code</description>
    <inlineHelpText>Bypass custom case flags code</inlineHelpText>
    <label>Bypass Case Flags</label>
    <type>Checkbox</type>
</CustomField>