force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassCaseReportDetail_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseReportDetail_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to bypass rollups to Case Object</inlineHelpText>
    <label>Bypass Case Report Detail Rollups</label>
    <type>Checkbox</type>
</CustomField>