force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassCaseReshare_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassCaseReshare_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bypasses the code in the NI_Case_TriggerHandler class that reshares case records after owner change.</inlineHelpText>
    <label>Bypass Case Resharing</label>
    <type>Checkbox</type>
</CustomField>