force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassContactSunsetContact__c.field-meta.xml
<CustomField>
    <fullName>BypassContactSunsetContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-027123

If this check box is checked, the &quot;updateAccForHasSunset&quot; method of the &quot;AH_Contact_Trigger_Handler&quot; Apex Class does not fire.</description>
    <inlineHelpText>If this check box is checked, the &quot;updateAccForHasSunset&quot; method of the &quot;AH_Contact_Trigger_Handler&quot; Apex Class does not fire.</inlineHelpText>
    <label>Bypass Contact - Sunset Contact</label>
    <type>Checkbox</type>
</CustomField>