force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassEmailMessage_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassEmailMessage_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass EmailMessage object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass EmailMessage object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass EmailMessage</label>
    <type>Checkbox</type>
</CustomField>