force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassIMT_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassIMT_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass IMT</label>
    <type>Checkbox</type>
</CustomField>