force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassMTechSaaS_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassMTechSaaS_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to bypass the triggers fro MTech Saas Integration</inlineHelpText>
    <label>Bypass MTech SaaS</label>
    <type>Checkbox</type>
</CustomField>