force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNICCArtifact_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNICCArtifact_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NICC_Artifact object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NICC_Artifact object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NICC_Artifact</label>
    <type>Checkbox</type>
</CustomField>