force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIChangeControl_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIChangeControl_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Change_Control object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Change_Control object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Change_Control</label>
    <type>Checkbox</type>
</CustomField>