force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNICREngagement_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNICREngagement_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_CR_Engagement object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_CR_Engagement object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_CR_Engagement</label>
    <type>Checkbox</type>
</CustomField>