force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNICustomizationService_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNICustomizationService_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Customization_Service object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Customization_Service object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Customization_Service</label>
    <type>Checkbox</type>
</CustomField>