force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIEmployeePerfEval_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIEmployeePerfEval_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass the triggers on the NI Employee Performance Evaluation Object</description>
    <inlineHelpText>Bypass the triggers on the NI Employee Performance Evaluation Object</inlineHelpText>
    <label>BypassNI_EmployeePerfEval_ON</label>
    <type>Checkbox</type>
</CustomField>