force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIICESubscription_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIICESubscription_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_ICESubscription object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_ICESubscription object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_ICESubscription</label>
    <type>Checkbox</type>
</CustomField>