force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIMilestoneForecast_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIMilestoneForecast_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_MilestoneForecast object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_MilestoneForecast object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_MilestoneForecast</label>
    <type>Checkbox</type>
</CustomField>