force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIOrgDetails_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIOrgDetails_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Org_Details object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Org_Details object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Org_Details</label>
    <type>Checkbox</type>
</CustomField>