force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNIPFyreAgentEvents_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNIPFyreAgentEvents_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_PFyre_AgentEvents object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_PFyre_AgentEvents object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_PFyre_AgentEvents</label>
    <type>Checkbox</type>
</CustomField>