force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNISalesExpenseReport_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNISalesExpenseReport_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass NI_Sales_Expense_Report object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass NI_Sales_Expense_Report object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass NI_Sales_Expense_Report</label>
    <type>Checkbox</type>
</CustomField>