force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNWSIServer_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNWSIServer_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass NWS IServer</label>
    <type>Checkbox</type>
</CustomField>