force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassNWSLocation_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassNWSLocation_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass NWS Location</label>
    <type>Checkbox</type>
</CustomField>