force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunity_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunity_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Opportunity object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass ALL Opportunity object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Opportunity</label>
    <type>Checkbox</type>
</CustomField>