force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityAcctPlansStrats__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityAcctPlansStrats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity - Acct Plans &amp; Strats</label>
    <type>Checkbox</type>
</CustomField>