force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityContactRoleChecks__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityContactRoleChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity - Contact Role Checks</label>
    <type>Checkbox</type>
</CustomField>