force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityHRMProductCreate__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityHRMProductCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity - HRM Product Create</label>
    <type>Checkbox</type>
</CustomField>