force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityProduct_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityProduct_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Opportunity Product object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass Opportunity Product object&apos;s trigger handler code.</inlineHelpText>
    <label>Bypass Opportunity Product</label>
    <type>Checkbox</type>
</CustomField>