force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityReleaseDateUpdate__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityReleaseDateUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity - Release Date Update</label>
    <type>Checkbox</type>
</CustomField>