force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassOpportunityRollupAmount__c.field-meta.xml
<CustomField>
    <fullName>BypassOpportunityRollupAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Opportunity - Rollup Amount</label>
    <type>Checkbox</type>
</CustomField>