force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassProduct2_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassProduct2_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Product2</label>
    <type>Checkbox</type>
</CustomField>