force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassProductRelease_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassProductRelease_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Product Release</label>
    <type>Checkbox</type>
</CustomField>