force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassPSAAssignment_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassPSAAssignment_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bypass custom triggers on pse__Assignment__c (managed) object</inlineHelpText>
    <label>Bypass PSA Assignment</label>
    <type>Checkbox</type>
</CustomField>