force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassPSAProject_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassPSAProject_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass PSA Project</label>
    <type>Checkbox</type>
</CustomField>