force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassResourcePlannerOverbook__c.field-meta.xml
<CustomField>
    <fullName>BypassResourcePlannerOverbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Resource Planner Overbook</label>
    <type>Checkbox</type>
</CustomField>