force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/BypassSupplyReqMonthlyRenewal_ON__c.field-meta.xml
<CustomField>
    <fullName>BypassSupplyReqMonthlyRenewal_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Supply Req Monthly Renewal</label>
    <type>Checkbox</type>
</CustomField>