force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/MasterSwitch_ON__c.field-meta.xml
<CustomField>
    <fullName>MasterSwitch_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked ALL trigger handlers that look to this Custom Setting will be bypassed.</description>
    <inlineHelpText>When checked ALL trigger handlers that look to this Custom Setting will be bypassed.</inlineHelpText>
    <label>Bypass ALL (Master Switch)</label>
    <type>Checkbox</type>
</CustomField>