force-app/main/default/objects/NI_TriggerBypassSwitches__c/fields/RealizedProjectBenefits_ON__c.field-meta.xml
<CustomField>
    <fullName>RealizedProjectBenefits_ON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass AH Realized Project Benefits object&apos;s trigger handler code.</description>
    <inlineHelpText>Bypass AH Realized Project Benefits object&apos;s trigger handler code.</inlineHelpText>
    <label>Realized Project Benefits</label>
    <type>Checkbox</type>
</CustomField>